import "ydb/core/protos/flat_tx_scheme.proto";

package NKikimrSchemeBoard;
option java_package = "ru.yandex.kikimr.proto";

message TLocalPathIdRange {
    optional uint64 Begin = 1;
    optional uint64 End = 2;
}

message TEvHandshake {
    optional uint64 Owner = 1;
    optional uint64 Generation = 2;
}

// here and below
// Owner is the tablet id of schemeshard witch holds the records
// LocalPathId is a second part of TPathId
// PathOwnerId is a first part of TPathId

message TEvUpdate {
    optional uint64 Owner = 1;
    optional uint64 Generation = 2;
    optional TLocalPathIdRange DeletedLocalPathIds = 3;
    optional string Path = 4;
    optional uint64 LocalPathId = 5;
    optional bool IsDeletion = 6 [default = false];
    optional NKikimrScheme.TEvDescribeSchemeResult DescribeSchemeResult = 7;
    optional bool NeedAck = 8 [default = false];
    optional uint64 PathOwnerId = 9;
    optional TLocalPathIdRange MigratedLocalPathIds = 10;
}

message TEvUpdateAck {
    optional uint64 Owner = 1;
    optional uint64 Generation = 2;
    optional uint64 LocalPathId = 3;
    optional uint64 Version = 4;
    optional uint64 PathOwnerId = 5;
}

message TEvCommitGeneration {
    optional uint64 Owner = 1;
    optional uint64 Generation = 2;
}

message TEvSubscribe {
    message TCapabilities {
        optional bool AckNotifications = 1 [default = false];
    }

    optional string Path = 1;
    // or
    optional uint64 PathOwnerId = 2;
    optional uint64 LocalPathId = 3;
    // common
    optional uint64 DomainOwnerId = 4;
    optional TCapabilities Capabilities = 5;
}

message TEvUnsubscribe {
    optional string Path = 1;
    // or
    optional uint64 PathOwnerId = 2;
    optional uint64 LocalPathId = 3;
}

message TEvNotify {
    optional string Path = 1;
    // and/or
    optional uint64 PathOwnerId = 2;
    optional uint64 LocalPathId = 3;
    // common fields
    optional bool IsDeletion = 4 [default = false];
    optional NKikimrScheme.TEvDescribeSchemeResult DescribeSchemeResult = 5;
    optional uint64 Version = 6;
    optional bool Strong = 7 [default = false];
}

message TEvNotifyAck {
    optional uint64 Version = 1;
}

message TEvSyncVersionRequest {
    optional string Path = 1;
    // and/or
    optional uint64 PathOwnerId = 2;
    optional uint64 LocalPathId = 3;
}

message TEvSyncVersionResponse {
    optional uint64 Version = 1;
    optional bool Partial = 2;
}
